[gd_scene load_steps=7 format=3 uid="uid://cbne2o42871na"]

[ext_resource type="Script" path="res://scripts/hazards/stalactite.gd" id="1_b6yq4"]
[ext_resource type="Texture2D" uid="uid://csjg1pv3m10io" path="res://sprites/hazards/stalactite.png" id="1_yvxls"]
[ext_resource type="PackedScene" uid="uid://glb3k6b5r155" path="res://scenes/engine/hitbox.tscn" id="2_8pemx"]
[ext_resource type="PackedScene" uid="uid://bb8nqnpoddwv0" path="res://scenes/particles/stalactite.tscn" id="2_qvpuc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2nkn0"]
size = Vector2(8, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7rn48"]
radius = 2.0
height = 8.0

[node name="Stalactite" type="CharacterBody2D"]
collision_layer = 128
safe_margin = 0.04
script = ExtResource("1_b6yq4")
particles = ExtResource("2_qvpuc")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("1_yvxls")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_2nkn0")

[node name="Hitbox" parent="." groups=["Hazard"] instance=ExtResource("2_8pemx")]
collision_mask = 193

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_7rn48")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(2.38419e-07, 4)
scale = Vector2(0.4, 0.4)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_hitbox_body_shape_entered"]
[connection signal="body_shape_exited" from="Hitbox" to="." method="_on_hitbox_body_shape_exited"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]

[editable path="Hitbox"]
